GKE/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-dpl
  namespace: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp-container
          image: "us-central1-docker.pkg.dev/prod-rvsharma-com/rv-docker-repo/rv-app:latest"
